--- a/templates/information.html.tt
+++ b/templates/information.html.tt
@@ -33,7 +33,7 @@
               <li><a href="http://www.sa-venues.com/visit/farmlands/">Farmlands</a>: [% h.l('a lovely farm and country atmosphere and central base to explore the Garden Route.') %]
               <li><a href="http://www.wheretostay.co.za/africansun/">African Sun</a>: [% h.l('a small holding with relaxing atmosphere and a beautiful view of the Outeniqua mountains.') %]
               <li><a href="http://www.sa-venues.com/visit/10caledonstreet/">10 Caledon Street Guest House</a>: [% h.l('a Bed &amp; Breakfast guest house in George, Garden Route situated in beautiful and tranquil surroundings.') %]
-              <li><a href="http://www.sa-venues.com/visit/malvernmanor/">Malvern Manor Country Guest House</a>: [% h.l('a luxury 4 star Guest House on a 50 acre country estate near Fancourt, which sits on the foothills of the Outeniqua mountains.') %]
+              <li><a href="http://www.sa-venues.com/visit/malvernmanor/">Malvern Manor Country Guest House</a>: [% h.l('a luxury 4 star guest house on a 50 acre country estate near Fancourt, which sits on the foothills of the Outeniqua mountains.') %]
               <li><a href="http://www.sa-venues.com/visit/argylehouse/">Argyle House</a>: [% h.l('a guest house located in a quiet cul–de–sac 200m from the state forest in the exclusive George suburb of Heatherlands.') %]
               <li><a href="http://www.sa-venues.com/visit/tantivvey/">Tantivvey Guest Farm</a>: [% h.l('a small farm surrounded by the beautiful Outeniqua mountains.') %]
               <li><a href="http://www.sa-venues.com/visit/thegardenvilla/">The Garden Villa</a>: [% h.l('a luxury place of tranquillity, a graceful Cape-Dutch homestead right at the foot of the Outeniqua mountains.') %]
