--- a/templates/layouts/layout.html.tt
+++ b/templates/layouts/layout.html.tt
@@ -40,6 +40,7 @@
 [% content %]
 
         <footer>
+          [%- IF NOT app.skip_translations %]
           <small>
             [%- IF app.lang == 'it' %]
             <a href="?lang=en">English version</a>
@@ -47,6 +48,7 @@
             <a href="?lang=it">Versione italiana</a>
             [%- END %]
           </small>
+          [%- END %]
 
           <br />
 
