--- a/templates/civil_ceremony.html.tt
+++ b/templates/civil_ceremony.html.tt
@@ -10,8 +10,8 @@
            <p>Non ci è stato possibile confermare la data fino a questi giorni, a causa di problemi e ritardi con le varie burocrazie coinvolte.</p>
           </article>
 
-          <article>
-           <h2>Cerimonia</h2>
+          <article class="vevent">
+           <h2 class="summary">Cerimonia</h2>
            <p>La cerimonia del rito civile si terrà il <time datetime="2011-05-07T11:30+01:00" class="dtstart" title="2011-05-07T11:30+01:00"><strong>7 maggio 2011</strong> alle ore <strong>11:30</strong></time> presso la <span class="location">sala consiliare della sede del Comune, in Corso Paolino d'Aquileia n. 2 a Cividale del Friuli</span>.</p>
           </article>
 <!--
