Set up site speed for Google Analytics

--- a/templates/layouts/layout.html.tt
+++ b/templates/layouts/layout.html.tt
@@ -70,7 +70,7 @@
     <script type="text/javascript">
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-323903-8']);
-      _gaq.push(['_trackPageview']);
+      _gaq.push(['_trackPageview'], ['_trackPageLoadTime']);
 
       (function() {
         var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
