--- a/templates/layouts/layout.html.tt
+++ b/templates/layouts/layout.html.tt
@@ -31,8 +31,9 @@
         <header>
 
           <hgroup class="vevent">
-            <h1 class="summary"><a href="/edoardo/wedding">[% h.l('Margaux and Edoardo') %]</a></h1>
-            <h2><time datetime="2011-09-30" class="dtstart" title="2011-09-30">[% h.l('30 September 2011') %]</time></h2>
+            <h1 class="summary"><a href="/edoardo/wedding">[% h.l('Margaux and Edoardo') %]<span class="hidden">[% h.l("'s wedding") %]</span></a></h1>
+            <h2><time datetime="2011-05-07" class="dtstart" title="2011-05-07">[% h.l('7 May 2011') %]</time> &#183;
+            <time datetime="2011-09-30" class="dtend" title="2011-09-30">[% h.l('30 September 2011') %]</time></h2>
           </hgroup>
 
         </header>
