--- a/templates/information.html.tt
+++ b/templates/information.html.tt
@@ -62,21 +62,21 @@
           <article>
           <h2>Garden Route</h2>
            <ul>
-           <li><a href="http://www.botlierskop.co.za">Botlierskop</a> Day Safaris: paradise for bird watchers with more than 200 species to be seen (malaria free).
+           <li><a href="http://www.botlierskop.co.za">Botlierskop</a> Day Safaris: [% h.l('paradise for bird watchers with more than 200 species to be seen (malaria free).') %]
 
-           <li><a href="http://www.birdsofeden.co.za">Birds of Eden</a>: the garden route's very own world class free flight bird sanctuary.
+           <li><a href="http://www.birdsofeden.co.za">Birds of Eden</a>: [% h.l("the Garden Route's very own world class free flight bird sanctuary.") %]
 
-           <li><a href="http://www.monkeyland.co.za">Monkeyland</a>: monkeys, lemurs and apes.
+           <li><a href="http://www.monkeyland.co.za">Monkeyland</a>: [% h.l('monkeys, lemurs and apes.') %]
 
            <li><a href="http://www.elephantsanctuary.co.za">Elephant Sanctuary</a>
 
-           <li><a href="http://www.tenikwa.co.za">Tenikwa Wildlife Awareness Centre</a>: guided tour to meet the indigenous cats of South Africa; walk with the cheetahs.
+           <li><a href="http://www.tenikwa.co.za">Tenikwa Wildlife Awareness Centre</a>: [% h.l('guided tour to meet the indigenous cats of South Africa; walk with the cheetahs.') %]
 
            <li><a href="http://www.cango.co.za">Cango Wildlife Ranch</a>
 
            <li><a href="http://www.cangocaves.co.za">Cango Caves</a>
 
-           <li><a href="http://www.colourfulafrica.co.za">Swartberg Mountain</a>: daily tours to the top and back. Tickets & departures from Wilgewandel, 2km from Cango Caves.
+           <li><a href="http://www.colourfulafrica.co.za">Swartberg Mountain</a>: [% h.l('daily tours to the top and back. Tickets & departures from Wilgewandel, 2km from Cango Caves.') %]
           </ul>
 
           <strong>Tsitsikamma Forest</strong>
@@ -89,12 +89,12 @@
 
           <strong>Bungy jumping</strong>
            <ul>
-            <li><a href="http://www.faceadrenalin.com">www.faceadrenalin.com</a>: the worlds highest: 216m!
+            <li><a href="http://www.faceadrenalin.com">www.faceadrenalin.com</a>: [% h.l('the worlds highest: 216m!') %]
            </ul>
 
           <strong>Ocean safaris</strong>
            <ul>
-            <li><a href="http://www.oceansafaris.co.za">www.oceansafaris.co.za</a>: boat-based whale watching.
+            <li><a href="http://www.oceansafaris.co.za">www.oceansafaris.co.za</a>: [% h.l('boat-based whale watching.') %]
            </ul>
 
           <strong>Big 5</strong>
@@ -105,14 +105,14 @@
 
           <strong>[% h.l('Ostriches') %]</strong>
           <ul>
-           <li><a href="http://www.highgate.co.za">Highgate ostrich Show Farm</a>: the worlds first, finest and most original ostrich show farm.
+           <li><a href="http://www.highgate.co.za">Highgate ostrich Show Farm</a>: [% h.l('the worlds first, finest and most original ostrich show farm.') %]
 
            <li><a href="http://www.cangoostrich.co.za">Cango Ostrich Farm</a>
           </ul>
 
            <strong>Knysna</strong>
             <ul>
-             <li><a href="http://www.knysnacharters.com">Knysna Lagoon charters</a>: Knysna lagoon boat tour, oysterbed tour, sunset cruise, Knysna head experience.
+             <li><a href="http://www.knysnacharters.com">Knysna Lagoon charters</a>: [% h.l('Knysna lagoon boat tour, oysterbed tour, sunset cruise, Knysna Heads experience.') %]
 
              <li><a href="http://www.featherbed.co.za">Featherbed nature reserve<a/>
             </ul>
@@ -121,16 +121,16 @@
             <ul>
              <li><a href="http://www.cosmoscuisine.co.za">Cosmos Cuisine</a>
 
-             <li>Game reserves in the surrounding area are: Addo, Raptor farm, Schotia, Cheetah breeding Sanctuary, Amakhala, Kariega Park and others.
+             <li>[% h.l('Game reserves in the surrounding area are: Addo, Raptor farm, Schotia, Cheetah breeding Sanctuary, Amakhala, Kariega Park and others.') %]
             </ul>
 
            <h2>Cape Town</h2>
             <ul>
              <li>Cape Point
-             <li>Table Mountain: cable car, walk and restaurant.
-             <li>Victoria and Alfred (V&A) Waterfront: shopping, restaurants and cinema.
+             <li>Table Mountain: [% h.l('cable car, walk and restaurant.') %]
+             <li>Victoria and Alfred (V&A) Waterfront: [% h.l('shopping, restaurants and cinema.') %]
              <li>Camps Bay
-             <li>Hout Bay: fish and chips at the harbour.
+             <li>Hout Bay: [% h.l('fish and chips at the harbour.') %]
              <li>Wine route: Stellenbosch, Franschhoek...
              <li>SA Art Museum
              <li>Robben Island
