--- a/templates/index.html.tt
+++ b/templates/index.html.tt
@@ -99,6 +99,15 @@
            <h2>[% h.l('September 30, 2011 - George') %]</h2>
            <p>[% h.l("On September 30, 2011 we had the religious wedding ceremony followed by the reception in Margaux's home town George, in the beautiful Garden Route in South Africa.") %]</p>
            <p>[% h.l('The spring day was absolutely fantastic, with both families together and many friends.') %]</p>
+           <p>[% h.l('Following a selection of some photos taken by <a href="http://www.michellephotography.co.za/">Michelle</a>, our photographer.') %]</p>
+
+           <div id="slideshow">
+            [%- i = 1; WHILE i < 110 %]
+             <img src="/edoardo/wedding/jpg/slideshow/[% i %].jpg" />
+             [%- i = i + 1 %]
+            [%- END %]
+           </div>
+
           </article>
 
         </section>
